--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Jonathan Millington-Hotze, lover, fighter, champion of the people</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Jonathan!</h1>
-				<p>I'm best known as the AWPer from <em>The Aston Clutchers.</em> My website's trash. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:jonathan@m-hotze.com">email</a></li>
-        		<li><a href="https://github.com/avaeroh">github.com/avaeroh</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Jonathan Millington-Hotze, lover, fighter, champion of the people
+---
+<div class="blurb">
+	<h1>Hi there, I'm Jonathan!</h1>
+	<p>I'm best known as the AWPer from <em>The Aston Clutchers.</em> My website's trash. </a></p>
+</div><!-- /.blurb -->
