--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 title: Jonathan's CV
+script: function resizeIframe(obj) {
+    		obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
+  	}
 ---
 <div class="blurb">
 	<h1>Jonathan's CV.</h1>
