--- a/about/index.html
+++ b/about/index.html
@@ -4,5 +4,5 @@ title: About Jonathan
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Jonathan!</h1>
-	<p>I'm best known as the AWPer from <em>The Aston Clutchers.</em> My website's trash. </a></p>
+	<li><a href="https://linkedin.com/in/jonathan-millington-hotze-a9355771/">LinkedIn</a></li>
 </div><!-- /.blurb -->
