--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,8 @@ layout: default
 title: About Jonathan
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Jonathan!</h1>
-	<li><a href="https://linkedin.com/in/jonathan-millington-hotze-a9355771/">LinkedIn</a></li>
+	<h1>Hi, I'm Jonathan</h1>
+	<img src="https://media.licdn.com/dms/image/C4D03AQEVDaT_VUu3kg/profile-displayphoto-shrink_200_200/0?e=1574899200&v=beta&t=1TvURBykE4AT_nRQytFmNKoJVh7lGIigYgnHSDv-Pq4"/>
+	<p>I created this website entirely for the sake of having a project to point my <a href="https://github.com/avaeroh/Testcafe"> Testcafe </a>CI pipeline at.</p>
+	<p>Shameless plug: <a href="https://linkedin.com/in/jonathan-millington-hotze-a9355771/">LinkedIn</p></li>
 </div><!-- /.blurb -->
