--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Jonathan Millington-Hotze, lover, fighter, champion of the people
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Jonathan!</h1>
-	<p>I'm best known as the AWPer from <em>The Aston Clutchers.</em> My website's trash. </a></p>
+	<h1>Avaeroh's hub</h1>
+	<p>Welcome to the premium <em>filler content</em> for my website. </a></p>
 </div><!-- /.blurb -->
