--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,9 @@ title: About Jonathan
 ---
 <div class="blurb">
 	<h1>Hi, I'm Jonathan.</h1>
-	<img alt="My face is currently missing, that's probably for the best" src="../linkedinimage.png"/>
+		<profilepic>
+			<img alt="My face is currently missing, that's probably for the best" src="../linkedinimage.png"/>
+		</profilepic>
 	<p>I created this website entirely for the sake of having a project to point my <a href="https://github.com/avaeroh/Testcafe"> Testcafe</a> CI pipeline at.</p>
 	<p>Shameless plug: <a href="https://linkedin.com/in/jonathan-millington-hotze-a9355771/">LinkedIn</p></li>
 </div><!-- /.blurb -->
